@startuml

'package moteurJeu'
interface DessinJeu{
    dessinerJeu(Jeu jeu, Canvas canvas)
}

interface Jeu{
    +update(double secondes, Clavier clavier)
    +init()
    +etreFini() : boolean
}


'package JeuSimple'
class LabyDessin{
    +{static}final int TAILLE
    dessinerJeu(Jeu jeu, Canvas canvas)
    creerRectangle(GraphicsContext gc, int x, int y)
}

LabyDessin ..|> DessinJeu

class LabyJeu{
    +{static} final int limite
    -murs : boolean[][]
    +LabyJeu(String nom)
    +ajouterMonstre()
    +genererMonstre()
    +update(double secondes, Clavier clavier)
    +init()
    +etreFini()
    +geters()
}

LabyJeu ..|> Jeu
LabyJeu "1"-->"1" Labyrinthe : -lab


'package gameLaby'
class Labyrinthe{
    {static} +MUR : char
    {static} +PJ : char
    {static} +VIDE : char
    {static} +PASSAGE : char
    {static} +BOUTON : char
    {static} +BOUTONFERME : char
    {static} +HAUT : String
    {static} +BAS : String
    {static} +GAUCHE : String
    {static} +DROITE : String
    +murs : boolean[][]

    +Labyrinthe(String nomFichier) : Labyrinthe
    {static}+getSuivant(int x, int y, String action) : int[]
    +deplacerPerso(String action) : void
    +deplacementPossible(int[] suivant) : boolean
    +etreFini() : boolean
    +getLenghtY() : int
    +getLenght() : int
    +getMur(int x, int y) : boolean
    +getPerso() : Perso
    +getMonstre() : ArrayList<Monstre>
    +getBoutonOuverture() : BoutonOuverture
    +getBoutonFermeture() : BoutonFermeture
    +recherche(Position p) : ArrayList<Position>
    +voisins(Position p) : ArrayList<Position>


}
class Perso {
    +Perso(int dx, int dy) : Perso
    +attaquer(Entitee e) : boolean
}

class Monstre{
    +Monstre(int dx, int dy)
    +attaquer(Entitee e) : boolean
}

class PassageSecret {
    -ouvert : boolean
    +PassageSecret(int dx, int dy, BoutonOuverture btn)
    +ouvrirPassage() : void
    +fermerPassage() : void
    +etreOuvert() : boolean
    +getPos() : Position
}

class BoutonOuverture {
    +BoutonOuverture(int dx, int dy, PassageSecret passage)
    +activerPassage() : void
    +getPos() : Position
}

class BoutonFermeture {
    +BoutonFermeture(int dx, int dy, PassageSecret passage)
    +fermer() : void
    +getPos() : Position
}

class Position {
    -x : int
    -y : int
    +Position(int x, int y) : Position
    +getX() : int
    +getY() : int
    +setX(int x) : void
    +setY(int y) : void
    +posEquals(Position pos) : boolean
    +posEquals(int x, int y) : boolean
}

class Entite{
    +DEGAT : int
    -pv : int
    +Entitee(int dx, int dy)
    +Entitee(int dx, int dy,int pv)
    +etrePresent(int dx, int dy) : boolean
    +etreMort() : boolean
    +perdrePv(int degat) : void
    +attaquer(Entitee e) : boolean
    +getPos() : Position
    +getPv() : int
}


Labyrinthe "1"-->"1" Perso : +pj
Labyrinthe "1"-->"1" Monstre : +monstre
Labyrinthe "1"-->"1" PassageSecret : -passageSecret
Labyrinthe "1"-->"1" BoutonOuverture : -bouton
Labyrinthe "1"-->"1" BoutonFermeture : -boutonFermeture
BoutonOuverture "1"-->"1" PassageSecret : +passageSecret
BoutonFermeture "1"-->"1" PassageSecret : +passageSecret
BoutonFermeture "1"-->"1" Position : -pos
Perso "1"-->"1" Position : -pos
Monstre "1"-->"1" Position : -pos
Perso --|> Entite
Monstre --|> Entite
PassageSecret "1"-->"1" Position : -pos
BoutonOuverture "1"-->"1" Position : -pos


@enduml